Gtk-3.18: [Gnome-Contacts] Fix dark gap in selection-mode header-bar

--- a/gtk-3.18/_common.scss
+++ b/gtk-3.18/_common.scss
@@ -1500,6 +1500,27 @@ GtkComboBox {
   }
 }
 
+.header-bar.selection-mode { // selection-mode specific
+  GtkBox & { // Remove unneeded side shadows with dirty hacks
+    &:not(:only-child):last-child {
+      &:dir(ltr) {
+        box-shadow: if($variant=='light', $selected-header-shadow-light-ltr,
+                                          $selected-header-shadow-dark-ltr);
+
+        .tiled &  { @extend %tiled_integration; }
+        .maximized & { @extend %maxd_integration; }
+      }
+      &:dir(rtl) {
+        box-shadow: if($variant=='light', $selected-header-shadow-light-rtl,
+                                          $selected-header-shadow-dark-rtl);
+
+        .tiled &  { @extend %tiled_integration; }
+        .maximized & { @extend %maxd_integration; }
+      }
+    }
+  }
+}
+
 .header-bar,
 .titlebar { // set rounded corners
   border-top-left-radius: 2px;
